==> open-vela/nuttx/arch/arm/src/imxrt/imxrt106x_flash.c <==
#include <nuttx/config.h>
#include <nuttx/arch.h>
#include <nuttx/mutex.h>
#include <arch/barriers.h>
#include <debug.h>
#include <stdbool.h>
#include <assert.h>
#include <errno.h>
#include "hardware/rt106x/imxrt106x_memorymap.h"
#include "arm_internal.h"
#define FLEXSPI_INSTANCE        (0)
#define FLEXSPI_INSTANCE        (1)
#define FLASH_PAGE_SIZE         (256UL)
#define FLASH_SECTOR_SIZE       (4096UL)
#define FLASH_ERASEDVALUE       (0xffu)
#define FLASH_ERASEDVALUE_DW    (0xffffffffu)
#define PROGMEM_NBLOCKS         (1024UL)
#define FLASH_NPAGES            ((4UL * 1024UL * 1024UL) / FLASH_PAGE_SIZE)
#define FLEXSPI_CFG_BLK_TAG     (0x42464346UL)
#define FLEXSPI_CFG_BLK_VERSION (0x56010400UL)
#define FLEXSPI_CFG_BLK_SIZE    (512)
#define CMD_SDR 0x01
#define CMD_DDR 0x21
#define RADDR_SDR 0x02
#define RADDR_DDR 0x22
#define CADDR_SDR 0x03
#define CADDR_DDR 0x23
#define MODE1_SDR 0x04
#define MODE1_DDR 0x24
#define MODE2_SDR 0x05
#define MODE2_DDR 0x25
#define MODE4_SDR 0x06
#define MODE4_DDR 0x26
#define MODE8_SDR 0x07
#define MODE8_DDR 0x27
#define WRITE_SDR 0x08
#define WRITE_DDR 0x28
#define READ_SDR 0x09
#define READ_DDR 0x29
#define LEARN_SDR 0x0a
#define LEARN_DDR 0x2a
#define DATSZ_SDR 0x0b
#define DATSZ_DDR 0x2b
#define DUMMY_SDR 0x0c
#define DUMMY_DDR 0x2c
#define DUMMY_RWDS_SDR 0x0d
#define DUMMY_RWDS_DDR 0x2d
#define JMP_ON_CS 0x1f
#define STOP 0
#define FLEXSPI_1PAD 0
#define FLEXSPI_2PAD 1
#define FLEXSPI_4PAD 2
#define FLEXSPI_8PAD 3

ssize_t up_progmem_getpage(size_t addr)
{
  struct imxrt106x_flash_priv_s *priv = &imxrt106x_flash_priv;

  return  priv->stpage + ((addr - priv->base) / FLASH_SECTOR_SIZE);
}

size_t up_progmem_getaddress(size_t page)
{
  struct imxrt106x_flash_priv_s *priv = &imxrt106x_flash_priv;

  if (page >= PROGMEM_NBLOCKS)
    {
      return SIZE_MAX;
    }

  return priv->base + (page - priv->stpage) * FLASH_SECTOR_SIZE;
}

ssize_t up_progmem_eraseblock(size_t block)
{
  struct imxrt106x_flash_priv_s *priv = &imxrt106x_flash_priv;
  int ret;
  status_t status;
  size_t block_address = (block * FLASH_SECTOR_SIZE);

  ret = nxmutex_lock(&priv->lock);
  if (ret < 0)
    {
      return (ssize_t)ret;
    }

  config_option.option0.U = 0xc0000008;

  up_irq_disable();
  up_disable_icache();
  up_disable_dcache();

  status = flexspi_nor_get_config(FLEXSPI_INSTANCE, &flash_config,
                                  &config_option);
  if (status != STATUS_SUCCESS)
    {
      ret = -EIO;
      goto exit_with_lock;
    }

  status = flexspi_nor_flash_init(FLEXSPI_INSTANCE, &flash_config);
  if (status != STATUS_SUCCESS)
    {
      ret = -EIO;
      goto exit_with_lock;
    }

  status = flexspi_nor_flash_erase(FLEXSPI_INSTANCE, &flash_config,
                                   block_address, FLASH_SECTOR_SIZE);
  if (status != STATUS_SUCCESS)
    {
      ret = -EIO;
      goto exit_with_lock;
    }

  ret = 0;

exit_with_lock:
  nxmutex_unlock(&priv->lock);

  /* Verify */

  if (ret == 0 &&
      imxrt106x_israngeerased(priv->base + block_address,
                              up_progmem_erasesize(block)) == 0)
    {
      ret = up_progmem_erasesize(block); /* success */
    }
  else
    {
      ret = -EIO; /* failure */
    }

  up_enable_dcache();
  up_enable_icache();
  up_irq_enable();

  return ret;
}

ssize_t up_progmem_write(size_t addr, const void *buf, size_t count)
{
  struct imxrt106x_flash_priv_s *priv = &imxrt106x_flash_priv;
  size_t written = count;
  uint32_t *ll = (uint32_t *)buf;
  size_t faddr;
  status_t status;
  int ret;
  const size_t pagesize = FLASH_PAGE_SIZE;
  const size_t llperpage  = pagesize / sizeof(uint32_t);
  size_t pcount = count / pagesize;

  ret = nxmutex_lock(&priv->lock);
  if (ret < 0)
    {
      return (ssize_t)ret;
    }

  /* Check address and count alignment */

  DEBUGASSERT(!(addr % pagesize));
  DEBUGASSERT(!(count % pagesize));

  config_option.option0.U = 0xc0000008;

  up_irq_disable();
  up_disable_icache();

  status = flexspi_nor_get_config(FLEXSPI_INSTANCE, &flash_config,
                                  &config_option);
  if (status != STATUS_SUCCESS)
    {
      written = -EIO;
      goto exit_with_lock;
    }

  status = flexspi_nor_flash_init(FLEXSPI_INSTANCE, &flash_config);
  if (status != STATUS_SUCCESS)
    {
      written = -EIO;
      goto exit_with_lock;
    }

  for (ll = (uint32_t *)buf, faddr = addr - priv->base; pcount;
       pcount -= 1, ll += llperpage, faddr += pagesize)
    {
      status = flexspi_nor_flash_page_program(FLEXSPI_INSTANCE,
                                              &flash_config, faddr, ll);
      if (status != STATUS_SUCCESS)
        {
          written = -EIO;
          break;
        }
    }

exit_with_lock:
  nxmutex_unlock(&priv->lock);
  up_enable_icache();
  up_irq_enable();

  return written;
}
